crates/toml_edit/tests/fixtures/invalid/table-empty.stderr
TOML parse error at line 1, column 2
  |
1 | []
  |  ^
Unexpected `]`
Expected key
While parsing a Table Header
